--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "react-image-gallery": "^1.3.0",
+    "react-slick": "^0.30.1",
+    "react-slideshow-image": "^4.3.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.17",
